WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184110
[iOS] Multiple select appearance doesn't update when selecting or deselecting rows in the picker view
https://bugs.webkit.org/show_bug.cgi?id=184110
Summary
[iOS] Multiple select appearance doesn't update when selecting or deselecting...
Wenson Hsieh
Reported
2018-03-28 13:17:07 PDT
<
rdar://problem/38796648
>
Attachments
Patch
(6.33 KB, patch)
2018-03-28 13:37 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2018-03-28 13:22:21 PDT
To reproduce: 1. Tap on a multiple select element 2. Pick a few rows, but don't hit Done Expected: the title of the select should reflect the current state of the options Observed: the title of the select is whatever it was prior to focusing the node Some additional notes: - As far as I know, the WK2 implementation has always been this way - When a row is selected using the picker UI, the corresponding option element is actually updated in the DOM (asking for option.selected will return the updated value) - However, the appearance of the select element itself doesn't update until the node is blurred - Alternately, programmatic changes to the selected attribute of the select's options also trigger appearance updates
Wenson Hsieh
Comment 2
2018-03-28 13:37:50 PDT
Created
attachment 336710
[details]
Patch
WebKit Commit Bot
Comment 3
2018-03-28 15:03:09 PDT
Comment on
attachment 336710
[details]
Patch Clearing flags on attachment: 336710 Committed
r230055
: <
https://trac.webkit.org/changeset/230055
>
WebKit Commit Bot
Comment 4
2018-03-28 15:03:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug